...

  Widget _buildLoginButton(BuildContext context) => Positioned(
        bottom: 100,
        left: 30,
        right: 30,
        child: PlanyButton(
          key: const Key('loginButtonHome'),
          text: 'Se connecter',
          onPressed: () => context.push(Routes.login),
          filled: true,
        ),
      );

...
